# lock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  _extract_all.py  _fix_special_tokens.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/deepspeed/: zero1.json  zero2.json  zero3.json  zero3_offload.json
configs/inference/: server.yaml
configs/model/: full_pro.json  mini_2b.json
configs/tokenizer/: train_config.yaml
configs/training/: adaptive_thinking.yaml  agentic_rl.yaml  cispo.yaml  distill.yaml  dpo.yaml  grpo.yaml  lora.yaml  ppo.yaml  pretrain.yaml  reward_model.yaml  sft.yaml  tool_use.yaml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
docs/: api_reference.md  architecture.md  index.md  inference_guide.md  integrations.md  training_guide.md  troubleshooting.md
examples/: full_pipeline_demo.sh  quickstart.py
examples/client/: curl.sh  openai_chat.py
scripts/: adaptive_thinking.py  agentic_rl.py  cispo.py  convert_model.py  distill.py  dpo.py  evaluate.py  grpo.py  launch.sh  lora.py  ppo.py  prepare_data.py  pretrain.py  run_needle.py  serve.py  sft.py  tool_use.py  train_reward_model.py  train_tokenizer.py
src/deepseek_v4/: __init__.py
src/deepseek_v4/data/: __init__.py  cleaning.py  collator.py  dataset.py  dedup.py  download.py  recipes.py
src/deepseek_v4/distributed/: __init__.py  deepspeed_utils.py  utils.py
src/deepseek_v4/evaluation/: __init__.py  base.py  engine.py
src/deepseek_v4/evaluation/tasks/: base_task.py
src/deepseek_v4/inference/: __init__.py  generation.py
src/deepseek_v4/inference/convert/: __init__.py  safetensors_utils.py  to_gguf.py  to_hf.py  to_ollama.py  to_vllm.py
src/deepseek_v4/inference/server/: __init__.py  app.py  config.py  engine.py  parsing.py  protocol.py  routes.py  server.py
src/deepseek_v4/modeling/: __init__.py  model.py
src/deepseek_v4/tokenizer/: __init__.py  bpe.py  encoding.py  special_tokens.py  tokenizer.py
src/deepseek_v4/training/: __init__.py  base_trainer.py  checkpoint.py  dpo.py  grad_checkpoint.py  lora_trainer.py  pretrain.py  reward_model.py  sft.py
src/deepseek_v4/utils/: __init__.py  config.py  io.py  logger.py  seed.py  timer.py
tests/: test_agentic.py  test_convert.py  test_data.py  test_distill_thinking.py  test_evaluation.py  test_grpo_cispo.py  test_rewards.py  test_rlhf.py  test_server.py  test_server_e2e.py  test_sft_lora.py  test_tokenizer.py  test_tool_use.py  test_training.py  test_yarn.py
tests/integration/: __init__.py  conftest.py  test_pipeline_e2e.py
(+46 files in other folders)
