[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-v4-mini"
version = "0.1.0"
description = "Industrial-grade DeepSeek-V4 training framework with Mini (2B) and Full (671B) configs."
authors = [{ name = "DeepSeek-V4 Mini Team" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["llm", "deepseek", "moe", "training", "rlhf", "ppo", "dpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.23.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "regex>=2023.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "transformers>=4.40.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "einops>=0.7.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
train = [
    "deepspeed>=0.13.0",
    "wandb>=0.16.0",
    "swanlab>=0.3.0",
    "peft>=0.10.0",
    "accelerate>=0.27.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=2.0.0",
    "openai>=1.0.0",
]
eval = [
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
all = ["deepseek-v4-mini[train,serve,eval,dev]"]

[project.scripts]
ds4-train-tokenizer = "deepseek_v4.tokenizer.trainer:cli"
ds4-pretrain        = "deepseek_v4.training.pretrain:cli"
ds4-sft             = "deepseek_v4.training.sft:cli"
ds4-dpo             = "deepseek_v4.training.dpo:cli"
ds4-ppo             = "deepseek_v4.training.ppo:cli"
ds4-grpo            = "deepseek_v4.training.grpo:cli"
ds4-cispo           = "deepseek_v4.training.cispo:cli"
ds4-evaluate        = "deepseek_v4.evaluation.evaluator:cli"
ds4-serve           = "deepseek_v4.inference.server:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py39"
